fixing inspect issues

--- a/404.html
+++ b/404.html
@@ -10,7 +10,6 @@
 <!-- Custom Theme files -->
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
-
 <!--//theme style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -49,9 +48,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  </div>
 
 <div class="destination-top">
-<br>
+<br><br>
 <br><h1><i class="fa fa-globe"></i>
 Oops ! Something went wrong.</h1></br></br>
+<i class="fa fa-smile-o fa-3x fa-fw"></i>
+<span class="sr-only">Loading...</span>
 </div>
 
        <div class="copywrite">
