--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Ramit Surana</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- Custom Theme files -->
@@ -169,11 +170,11 @@
 					 <h5><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></h5>					 
 					 <p>An awesome list of Kubernetes resources</p><br><br><br>
 						 <!-- Place this tag where you want the button to render. -->
-						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes" data-count-href="/ramitsurana/awesome-kubernetes/stargazers" data-count-api="/repos/ramitsurana/awesome-kubernetes#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-kubernetes on GitHub">Star</a>
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes" data-count-href="/ramitsurana/awesome-kubernetes/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-kubernetes on GitHub">Star</a>
 						 <!-- Place this tag where you want the button to render. -->
-						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes/fork" data-count-href="/ramitsurana/awesome-kubernetes/network" data-count-api="/repos/ramitsurana/awesome-kubernetes#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-kubernetes on GitHub">Fork</a>
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes/fork" data-count-href="/ramitsurana/awesome-kubernetes/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-kubernetes on GitHub">Fork</a>
 						 <!-- Place this tag where you want the button to render. -->
-						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes/subscription" data-count-href="/ramitsurana/awesome-kubernetes/watchers" data-count-api="/repos/ramitsurana/awesome-kubernetes#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-kubernetes on GitHub">Watch</a>					 
+						 <a class="github-button" href="https://github.com/ramitsurana/awesome-kubernetes/subscription" data-count-href="/ramitsurana/awesome-kubernetes/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-kubernetes on GitHub">Watch</a>					 
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
@@ -182,11 +183,11 @@
 					 <h5><a href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></h5>
 					 <p>I have created an awesome list of Openstack resources.</p><br><br>
 						 <!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack" data-count-href="/ramitsurana/awesome-openstack/stargazers" data-count-api="/repos/ramitsurana/awesome-openstack#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-openstack on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack" data-count-href="/ramitsurana/awesome-openstack/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/awesome-openstack on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack/fork" data-count-href="/ramitsurana/awesome-openstack/network" data-count-api="/repos/ramitsurana/awesome-openstack#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-openstack on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack/fork" data-count-href="/ramitsurana/awesome-openstack/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/awesome-openstack on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack/subscription" data-count-href="/ramitsurana/awesome-openstack/watchers" data-count-api="/repos/ramitsurana/awesome-openstack#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-openstack on GitHub">Watch</a>					
+					<a class="github-button" href="https://github.com/ramitsurana/awesome-openstack/subscription" data-count-href="/ramitsurana/awesome-openstack/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/awesome-openstack on GitHub">Watch</a>					
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
@@ -204,11 +205,11 @@
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/turbo" target='_blank'>Turbo</a></h5>
 					 <p>A simple and powerfull utility for Docker</p><br><br>
-					 <a class="github-button" href="https://github.com/ramitsurana/turbo" data-count-href="/ramitsurana/turbo/stargazers" data-count-api="/repos/ramitsurana/turbo#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/turbo on GitHub">Star</a>
+					 <a class="github-button" href="https://github.com/ramitsurana/turbo" data-count-href="/ramitsurana/turbo/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/turbo on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/turbo/fork" data-count-href="/ramitsurana/turbo/network" data-count-api="/repos/ramitsurana/turbo#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/turbo on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/turbo/fork" data-count-href="/ramitsurana/turbo/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/turbo on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/turbo/subscription" data-count-href="/ramitsurana/turbo/watchers" data-count-api="/repos/ramitsurana/turbo#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/turbo on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/turbo/subscription" data-count-href="/ramitsurana/turbo/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/turbo on GitHub">Watch</a>
 				 </div>
 			 </div>			 
 			 <div class="col-md-4 desti-grid">
@@ -216,11 +217,11 @@
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/project1">Project1</a></h5>
 					 <p>Using Ansible to setup Wordpress, MariaDB & ELK Stack to an AWS EC2 instance with Docker Compose</p><br><br>
-					 <a class="github-button" href="https://github.com/ramitsurana/project1" data-count-href="/ramitsurana/project1/stargazers" data-count-api="/repos/ramitsurana/project1#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/project1 on GitHub">Star</a>
+					 <a class="github-button" href="https://github.com/ramitsurana/project1" data-count-href="/ramitsurana/project1/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/project1 on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/project1/fork" data-count-href="/ramitsurana/project1/network" data-count-api="/repos/ramitsurana/project1#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/project1 on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/project1/fork" data-count-href="/ramitsurana/project1/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/project1 on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/project1/subscription" data-count-href="/ramitsurana/project1/watchers" data-count-api="/repos/ramitsurana/project1#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/project1 on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/project1/subscription" data-count-href="/ramitsurana/project1/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/project1 on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
@@ -228,11 +229,11 @@
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/terraform-ansible-setup/">Terraform-Ansible-Setup</a></h5>
 					 <p>Setting up your complete infrastructure on cloud premises using Infrastructure as a Code</p><br><br>
-					 <a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/stargazers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/terraform-ansible-setup on GitHub">Star</a>
+					 <a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup" data-count-href="/ramitsurana/terraform-ansible-setup/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/terraform-ansible-setup on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/fork" data-count-href="/ramitsurana/terraform-ansible-setup/network" data-count-api="/repos/ramitsurana/terraform-ansible-setup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/terraform-ansible-setup on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/fork" data-count-href="/ramitsurana/terraform-ansible-setup/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/terraform-ansible-setup on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/subscription" data-count-href="/ramitsurana/terraform-ansible-setup/watchers" data-count-api="/repos/ramitsurana/terraform-ansible-setup#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/terraform-ansible-setup on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/terraform-ansible-setup/subscription" data-count-href="/ramitsurana/terraform-ansible-setup/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/terraform-ansible-setup on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="clearfix"></div>
@@ -244,24 +245,24 @@
 					 <h5><a href="http://ramitsurana.github.io/the-serverless-setup" target="_blank">The-Serverless-Setup</a></h5>
 					 <p>Setup your entire infrastructure with serverless functions</p><br><br>
 						 <!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup" data-count-href="/ramitsurana/the-serverless-setup/stargazers" data-count-api="/repos/ramitsurana/the-serverless-setup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/the-serverless-setup on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup" data-count-href="/ramitsurana/the-serverless-setup/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/the-serverless-setup on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup/fork" data-count-href="/ramitsurana/the-serverless-setup/network" data-count-api="/repos/ramitsurana/the-serverless-setup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/the-serverless-setup on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup/fork" data-count-href="/ramitsurana/the-serverless-setup/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/the-serverless-setup on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup/subscription" data-count-href="/ramitsurana/the-serverless-setup/watchers" data-count-api="/repos/ramitsurana/the-serverless-setup#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/the-serverless-setup on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/the-serverless-setup/subscription" data-count-href="/ramitsurana/the-serverless-setup/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/the-serverless-setup on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="col-md-4 desti-grid">
-				   <img class="example-image" src="images/d8.png" alt=""/></a>
+				   <img class="example-image" src="" alt=""/></a>
 				 <div class="desti-info">
 					 <h5><a href="http://ramitsurana.github.io/dbspace/" target="_blank">Dbspace</a></h5>
 					 <p>Implementing Databases on AWS, GCP, Azure etc.</p><br><br>
 						 <!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/dbspace/" data-count-href="/ramitsurana/dbspace/stargazers" data-count-api="/repos/ramitsurana/dbspace#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/dbspace on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/ramitsurana/dbspace/" data-count-href="/ramitsurana/dbspace/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/dbspace on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/dbspace/fork" data-count-href="/ramitsurana/dbspace/network" data-count-api="/repos/ramitsurana/dbspace#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/dbspace on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/dbspace/fork" data-count-href="/ramitsurana/dbspace/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/dbspace on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/dbspace/subscription" data-count-href="/ramitsurana/dbspace/watchers" data-count-api="/repos/ramitsurana/dbspace#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/dbspace on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/dbspace/subscription" data-count-href="/ramitsurana/dbspace/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/dbspace on GitHub">Watch</a>
 				 </div>
 			 </div>
 			 <div class="clearfix"></div>					 
@@ -336,6 +337,5 @@
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!---->
 <script src="js/responsiveslides.min.js"></script>
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
