--- a/pages/contact.html
+++ b/pages/contact.html
@@ -165,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="copywrite">
 	 <div class="container">
-			 <p> © 2015 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+			 <p> © 2014 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
 	 </div>
 </div>
 
@@ -173,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!---->
 <!--/animatedcss-->
-<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="../js/move-top.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
@@ -185,21 +185,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 </script>
 <!--script-->
-<script type="text/javascript">
-		$(document).ready(function() {
-				/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-				*/
-		$().UItoTop({ easingType: 'easeOutQuart' });
-});
-</script>
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!---->
-<script src="js/responsiveslides.min.js"></script> 
+<script src="../js/responsiveslides.min.js"></script> 
 </body>
 </html>
