--- a/pages/about.html
+++ b/pages/about.html
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <!--/animatedcss-->
-<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="../js/move-top.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 <!--/script-->
 <script type="text/javascript">
@@ -197,13 +197,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 </script>
 <!--script-->
-<script type="text/javascript">
-		$(document).ready(function() {
-		$().UItoTop({ easingType: 'easeOutQuart' });
-});
-</script>
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!---->
-<script src="js/responsiveslides.min.js"></script> 
+<script src="../js/responsiveslides.min.js"></script> 
 </body>
 </html>
