--- a/404.html
+++ b/404.html
@@ -55,11 +55,16 @@ Oops ! Something went wrong.</h1></br></br>
 <span class="sr-only">Loading...</span>
 </div>
 
-       <div class="copywrite">
-       	 <div class="container">
-       			 <p> © 2015 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
-       	 </div>
-       </div>
+<div class="copywrite">		
+		<div class="container">			
+					   <span id="copyright">
+							   &copy;
+						   <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+						   All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+					   </span>
+				   </div>						 
+		</div>
+   </div>
 
        <!---->
        <script src="js/lightbox-plus-jquery.min.js"></script>
