--- a/pages/contact.html
+++ b/pages/contact.html
@@ -163,11 +163,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 </div>
 </div>
 
-<div class="copywrite">
-	 <div class="container">
-			 <p> © 2014 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
-	 </div>
-</div>
+<div class="copywrite">		
+		<div class="container">			
+					   <span id="copyright">
+							   &copy;
+						   <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+						   All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+					   </span>
+				   </div>						 
+		</div>
+   </div>
 
 <!---->
 
