--- a/pages/support.html
+++ b/pages/support.html
@@ -134,12 +134,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>		 
 	 </div>
 </div>
-<div class="copywrite">
-	 <div class="container">
-			 <p> © 2015 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana
-			 </p>
-	 </div>
-</div>
+<div class="copywrite">		
+		<div class="container">			
+					   <span id="copyright">
+							   &copy;
+						   <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+						   All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+					   </span>
+				   </div>						 
+		</div>
+   </div>
 
 <!--/animatedcss-->
 <script type="text/javascript" src="../js/move-top.js"></script>
