--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="keywords" content="away" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
@@ -74,7 +74,7 @@
 		  <!--/navbar-->
 	  </div>
 	 <div class="clearfix"></div>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
@@ -299,9 +299,14 @@
 	 </div>
 </div>
 
-<div class="copywrite">
-	 <div class="container">
-			 <p> © 2014 Ramit Surana. All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+<div class="copywrite">		
+	 <div class="container">			
+					<span id="copyright">
+							&copy;
+						<script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+						All rights reserved | Design by <a href="http://github.com/ramitsurana/" target="_blank">Ramit Surana</a></p>
+					</span>
+				</div>						 
 	 </div>
 </div>
 
