fix jquery & projects

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<ul class="dropdown-menu">
 							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
 							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></li>
-							<li><a class="scroll" href="#destination" target="_blank">Raspberry Pi</a></li>
-							<li><a class="scroll" href="http://coolhacks.io" target="_blank">Cool Hacks</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/turbo" target="_blank">Turbo</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/project1" target="_blank">Project1</a></li>
 						</ul>
 					 </li>
 					 <li><a href="pages/presentation.html">Presentations</a></li>
