--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 </head>
@@ -50,9 +50,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <li class="dropdown">
 						<a href="../index.html" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
-							<li><a href="http://ramitsurana.github.io/awesome-openstack">Awesome Openstack</a></li>
-							<li><a href="../index.html">Raspberry Pi</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/turbo" target="_blank">Turbo</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/project1" target="_blank">Project1</a></li>
 						</ul>
 					 </li>					
 					 <li><a href="presentation.html">Presentations</a></li>
