--- a/pages/video.html
+++ b/pages/video.html
@@ -49,9 +49,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <li class="dropdown">
 						<a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
-							<li><a href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Openstack</a></li>
-							<li><a href="index.html">Raspberry Pi</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-kubernetes" target="_blank">Awesome Kubernetes</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/awesome-openstack" target="_blank">Awesome Openstack</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/turbo" target="_blank">Turbo</a></li>
+							<li><a class="scroll" href="http://ramitsurana.github.io/project1" target="_blank">Project1</a></li>
 						</ul>
 					 </li>					
 					 <li><a href="presentation.html">Presentation</a></li>					
@@ -65,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  <!--/.navbar-->		 
 	  </div>
 	 <div class="clearfix"></div>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		</div>
 </div>
