add youtube option

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<script src="https://apis.google.com/js/platform.js"></script>	
 <!-- Custom Theme files -->
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -126,7 +127,8 @@
 				 <p>Welcome to my home.Please feel free to explore the website,if you are looking to view and follow up
 				 my recent activities checkout:<br>				 
 				 <h4>Have some work for me. Try to contact me at:</h4>
-				 <a href="mailto:ramitsurana@gmail.com?Subject=Freelance%20Work">Mail</p>
+				 <a href="mailto:ramitsurana@gmail.com?Subject=Freelance%20Work">Mail</p>				  
+				<div class="g-ytsubscribe" data-channelid="UC1oG8ghVnv228kpxFCN6G2w" data-layout="default" data-count="default"></div>
 	        </a>
 			  </div>
 			  <div class="clearfix"></div>
