--- a/pages/video.html
+++ b/pages/video.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/style4.css" />
 <script type="text/javascript" src="../js/modernizr.custom.79639.js"></script>
+<script src="https://apis.google.com/js/platform.js"></script>	
 <!--//theme style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -73,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---->
 <div class="gallery">
 	 <div class="container">
-		 <h2>My Talks</h2>
+		 <h2>My Talks</h2> <div class="g-ytsubscribe" data-channelid="UC1oG8ghVnv228kpxFCN6G2w" data-layout="default" data-count="default"></div>
 		 <p> Some of these talks are featured at:</p>
 		<li><a href="http://rbl.ms/1UMYqNL" target="_blank">RebelMouse<a></li>
 		 <div class="gallery-bottom">
