fix vault with hashicorp-tools

--- a/index.html
+++ b/index.html
@@ -268,19 +268,17 @@
 					<a class="github-button" href="https://github.com/ramitsurana/dbspace/subscription" data-count-href="/ramitsurana/dbspace/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/dbspace on GitHub">Watch</a>
 				 </div>
 			 </div>
-			 <div class="clearfix"></div>
-			 <div class="destintn-grids">
 			 <div class="col-md-4 desti-grid">
 				   <img class="example-image" src="images/d8.png" alt=""/></a>
 				 <div class="desti-info">
-					 <h5><a href="http://ramitsurana.github.io/vault" target="_blank">Vault</a></h5>
-					 <p>Secure your Infrastructure with Vault by Hashicorp</p><br><br>
+					 <h5><a href="http://ramitsurana.github.io/hashicorp-tools-setup" target="_blank">Hashicorp Tools</a></h5>
+					 <p>Automate your Infrastructure using Hashicorp Tool</p><br><br>
 						 <!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/vault" data-count-href="/ramitsurana/vault/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/vault on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/ramitsurana/hashicorp-tools-setup" data-count-href="/ramitsurana/hashicorp-tools-setup/stargazers" data-show-count="true" data-count-aria-label="# stargazers on GitHub" aria-label="Star ramitsurana/hashicorp-tools-setup on GitHub">Star</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/vault/fork" data-count-href="/ramitsurana/vault/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/vault on GitHub">Fork</a>
+					<a class="github-button" href="https://github.com/ramitsurana/hashicorp-tools-setup/fork" data-count-href="/ramitsurana/hashicorp-tools-setup/network" data-show-count="true" data-count-aria-label="# forks on GitHub" aria-label="Fork ramitsurana/hashicorp-tools-setup on GitHub">Fork</a>
 					<!-- Place this tag where you want the button to render. -->
-					<a class="github-button" href="https://github.com/ramitsurana/vault/subscription" data-count-href="/ramitsurana/vault/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/vault on GitHub">Watch</a>
+					<a class="github-button" href="https://github.com/ramitsurana/hashicorp-tools-setup/subscription" data-count-href="/ramitsurana/hashicorp-tools-setup/watchers" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch ramitsurana/hashicorp-tools-setup on GitHub">Watch</a>
 				 </div>
 			 </div>
 	 </div>
